<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:background="@drawable/todo_item_background"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/todo_item_description_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/todo_item_delete_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/todo_item_guide_vertical"
        app:layout_constraintTop_toTopOf="@+id/todo_item_edit_button"
        tools:text="Description: " />

    <Button
        android:id="@+id/todo_item_edit_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/edit_button_title"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toTopOf="@+id/todo_item_delete_button"
        app:layout_constraintLeft_toLeftOf="@+id/todo_item_guide_vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:text="Edit" />

    <Button
        android:id="@+id/todo_item_delete_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/delete_button_title"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toTopOf="@+id/todo_item_status_change_button"
        app:layout_constraintLeft_toLeftOf="@+id/todo_item_guide_vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_item_edit_button"
        tools:text="Delete" />

    <Button
        android:id="@+id/todo_item_status_change_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toTopOf="@+id/todo_item_add_signature_button"
        app:layout_constraintLeft_toLeftOf="@+id/todo_item_guide_vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_item_delete_button"
        tools:text="Complete" />

    <TextView
        android:id="@+id/todo_item_status_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/todo_item_status_change_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/todo_item_guide_vertical"
        app:layout_constraintTop_toTopOf="@+id/todo_item_status_change_button"
        tools:text="Status: " />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:src="@drawable/dashed_line"
        android:layerType="software"
        app:layout_constraintBottom_toTopOf="@+id/todo_item_status_change_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_item_delete_button"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:src="@drawable/dashed_line"
        android:layerType="software"
        app:layout_constraintBottom_toTopOf="@+id/todo_item_add_signature_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_item_status_change_button"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/todo_item_add_signature_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_signature_title"
        android:textSize="@dimen/text_medium"
        app:layout_constraintTop_toBottomOf="@+id/todo_item_status_change_button"
        app:layout_constraintLeft_toLeftOf="@+id/todo_item_guide_vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="@string/add_signature_title" />

    <TextView
        android:id="@+id/todo_item_signature_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signature_title"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintBottom_toBottomOf="@+id/todo_item_add_signature_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/todo_item_signature_image_view"
        app:layout_constraintTop_toTopOf="@+id/todo_item_add_signature_button"
         />

    <ImageView
        android:id="@+id/todo_item_signature_image_view"
        android:layout_width="120dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/todo_item_add_signature_button"
        app:layout_constraintLeft_toRightOf="@+id/todo_item_signature_textview"
        app:layout_constraintTop_toTopOf="@+id/todo_item_add_signature_button"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:src="@drawable/full_line"
        android:layerType="software"
        app:layout_constraintTop_toBottomOf="@+id/todo_item_signature_image_view"
        app:layout_constraintLeft_toLeftOf="@+id/todo_item_signature_image_view"
        app:layout_constraintRight_toRightOf="@+id/todo_item_signature_image_view"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/todo_item_guide_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".7" />
</androidx.constraintlayout.widget.ConstraintLayout>